--- a/EcommerceProject/package.json
+++ b/EcommerceProject/package.json
@@ -7,11 +7,19 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.1",
+    "https-browserify": "^1.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
