--- a/EcommerceProject/package.json
+++ b/EcommerceProject/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@medusajs/js-sdk": "^2.10.3",
+    "@medusajs/medusa-js": "^6.1.10",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -15,7 +17,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^7.9.1",
+    "react-jwt": "^1.3.0",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
