Save local changes before pull

--- a/MedusaJS_Test/my-medusa-store/docker-compose.yml
+++ b/MedusaJS_Test/my-medusa-store/docker-compose.yml
@@ -2,14 +2,14 @@ services:
   # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
-    container_name: medusa_postgres_test
+    container_name: medusa_postgres_ecommerce
     restart: unless-stopped
     environment:
-      POSTGRES_DB: medusa-store
+      POSTGRES_DB: medusa_store
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -18,7 +18,7 @@ services:
   # Redis
   redis:
     image: redis:7-alpine
-    container_name: medusa_redis_test
+    container_name: medusa_redis_ecommerce
     restart: unless-stopped
     ports:
       - "6379:6379"
@@ -30,7 +30,7 @@ services:
   # and the admin dashboard.
   medusa:
     build: .
-    container_name: medusa_backend_test
+    container_name: medusa_backend_ecommerce
     restart: unless-stopped
     depends_on:
       - postgres
@@ -39,7 +39,7 @@ services:
       - "9000:9000"
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/medusa-store
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/medusa_store
       - REDIS_URL=redis://redis:6379
     env_file:
       - .env
