create page Support & Email & Contact

--- a/EcommerceProject/.env
+++ b/EcommerceProject/.env
@@ -14,3 +14,12 @@ REACT_APP_MEDUSA_PUBLISHABLE_KEY=pk_d4bf2faebacb69611013a1fd3c32bb8f76ab55d06f20
 
 # ID khu vực Medusa (Bắt buộc cho các route Store API khác)
 REACT_APP_MEDUSA_REGION_ID=reg_01K73N9QAJJ6DVF7FGKAKCJQG0
+# --- Tùy chọn ---
+# Thay thế bằng Public Key/User ID của bạn
+REACT_APP_EMAILJS_PUBLIC_KEY="YKrBEa714vvKWx0pv"
+
+# Thay thế bằng Service ID của bạn (ví dụ: service_ptcml85)
+REACT_APP_EMAILJS_SERVICE_ID="service_ptcml85"
+
+# Thay thế bằng Template ID của Template "Contact Us"
+REACT_APP_EMAILJS_TEMPLATE_ID="template_0s1zehj"
