--- a/EcommerceProject/package.json
+++ b/EcommerceProject/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@medusajs/js-sdk": "^2.10.3",
     "@medusajs/medusa-js": "^6.1.10",
     "@testing-library/dom": "^10.4.1",
