edit start.sh v3

--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -1,24 +1,3 @@
-# # Development Dockerfile for Medusa
-# FROM node:20-alpine
-
-# # Set working directory
-# WORKDIR /app
-
-# # Copy package files and npm config
-# COPY package.json package-lock.json ./
-
-# # Install all dependencies using npm
-# RUN npm install
-
-# # Copy source code
-# COPY . .
-
-# # Expose the port Medusa runs on
-# EXPOSE 9000
-
-# # Start with migrations and then the development server
-# CMD ["./start.sh"]
-
 # Giai đoạn 1: Build Stage (Cài đặt dependencies và Build Admin)
 FROM node:20-alpine AS build
 WORKDIR /app
@@ -26,15 +5,16 @@ WORKDIR /app
 # 1. Copy package files (không cache)
 COPY package.json package-lock.json ./ 
 
-# 2. Cài đặt Dependencies (không cache)
-RUN npm install --omit=dev
+# 2. Cài đặt TẤT CẢ Dependencies (bao gồm devDeps để build TS)
+# Lần này chúng ta không dùng --omit=dev để đảm bảo ts-node và typescript có sẵn.
+RUN npm install
 
 # 3. Copy toàn bộ mã nguồn VÀ cấu hình
 # BẮT BUỘC trước khi chạy lệnh build và các lệnh cần config
 COPY . .
 
 # 4. Build Medusa Backend (Biên dịch TypeScript sang Dist)
-# BẢO ĐẢM thư mục 'dist' được tạo. Lệnh 'build' trong package.json của bạn là 'medusa build'.
+# Lệnh 'medusa build' biên dịch code TS và tạo thư mục 'dist'
 RUN npm run build
 
 # ----------------------------------------------------------------------
@@ -42,15 +22,18 @@ RUN npm run build
 FROM node:20-alpine AS final
 WORKDIR /app
 
-# 1. Copy dependencies và code đã build từ Build Stage
-# Điều này đảm bảo tất cả các file node_modules và build admin đều có mặt
-COPY --from=build /app/node_modules ./node_modules
+# 1. Cài đặt lại chỉ dependencies cần thiết cho runtime (Production)
+# Chúng ta cài lại để loại bỏ devDependencies không cần thiết.
+COPY package.json package-lock.json ./
+RUN npm install --omit=dev
+
+# 2. Copy code đã build và script khởi động
+# Đảm bảo dist đã được tạo ở giai đoạn build
 COPY --from=build /app/dist ./dist
-COPY package.json start.sh ./
+COPY start.sh ./
 
 # Expose cổng (Mặc định là 9000, hoặc tùy vào biến PORT)
 EXPOSE 9000
 
 # Lệnh khởi động (sử dụng start.sh đã được sửa để gọi npm run start)
 CMD ["sh", "start.sh"]
-
