--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -1,18 +1,25 @@
-# Dockerfile cho MedusaJS chạy trên Render
+# Dockerfile cho MedusaJS chạy trên Render (build cả admin)
 FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Copy package files và cài dependencies
+# Copy package files và cài dependencies backend
 COPY package.json package-lock.json ./
 RUN npm install
 
 # Copy toàn bộ source code
 COPY . .
 
-# Thêm bash vì Alpine không có sẵn
+# Cài đặt bash vì Alpine không có sẵn
 RUN apk add --no-cache bash
+
+# Nếu có thư mục admin thì build luôn
+WORKDIR /app/admin
+RUN npm install && npm run build
+
+# Quay lại thư mục backend
+WORKDIR /app
 
 # Cấp quyền thực thi cho start.sh
 RUN chmod +x start.sh
@@ -20,5 +27,5 @@ RUN chmod +x start.sh
 # Expose port 9000 (Medusa default)
 EXPOSE 9000
 
-# Chạy script start.sh bằng bash
+# Chạy start.sh
 CMD ["bash", "./start.sh"]
