--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
 
-# Copy toàn bộ source code (Đảm bảo file admin nằm trong /app/admin)
+# Copy toàn bộ source code
 COPY . .
 
 # Cài đặt bash vì Alpine không có sẵn
@@ -18,18 +18,14 @@ RUN apk add --no-cache bash
 WORKDIR /app/admin
 RUN npm install && npm run build
 
-# *** BƯỚC THÊM VÀO: Copy Admin Build files về thư mục chính ***
-# Giả sử admin build tạo ra thư mục 'build' hoặc 'dist' (Kiểm tra lại tên thư mục này)
-# Nếu build folder là 'build':
-# COPY ./build /app/build 
-# Hoặc nếu bạn muốn đặt nó trong thư mục cụ thể để Medusa dễ tìm:
+# *** BƯỚC SỬA LỖI: Copy Admin Build files về thư mục chính ***
 WORKDIR /app
-# Thay thế 'build' bằng tên thư mục build thực tế (thường là build hoặc dist)
-RUN rm -rf ./admin && mv ./admin/build ./admin-build
-
-# Medusa v2 có thể cần bạn chạy 'medusa build' cho cả backend
-# Nếu bạn dùng Medusa v2 (Modular), bước này thường không cần vì npm run build trong admin đã tự build backend
-# WORKDIR /app 
+# Đã xác nhận thư mục build là 'dist' (chứ không phải 'build')
+# Lệnh này sẽ move thư mục /app/admin/dist thành /app/admin-build
+# (Nếu bạn chỉ cần giữ lại /admin-build, dùng lệnh này. Nếu muốn giữ code admin, dùng COPY)
+# Để đơn giản và giải quyết lỗi, chúng ta sẽ **COPY** thay vì mv/rm để tránh xung đột
+COPY --from=0 /app/admin/dist /app/admin-build 
+RUN rm -rf ./admin # Xóa thư mục source admin để giảm kích thước image
 
 # Cấp quyền thực thi cho start.sh
 RUN chmod +x start.sh
