--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -20,11 +20,13 @@ RUN npm install && npm run build
 
 # *** BƯỚC SỬA LỖI LẦN CUỐI: Quay lại /app và di chuyển thư mục build ***
 WORKDIR /app
-# Thử đường dẫn Admin Build phổ biến khác: 'public'
-# Di chuyển thư mục build từ /app/admin/public sang /app/admin-build
-# LƯU Ý: Nếu thư mục build là 'dist', bạn phải đặt lại là 'dist'
-RUN mv ./admin/public ./admin-build && rm -rf ./admin
-# Nếu lỗi này vẫn xảy ra, tức là thư mục Admin build **là thư mục gốc /app/admin**
+# 1. DI CHUYỂN THƯ MỤC BUILD (KHẢ NĂNG LÀ 'dist')
+# Nếu lỗi này xảy ra lần nữa, bạn cần kiểm tra trực tiếp code để biết tên thư mục build.
+RUN mv ./admin/dist ./admin-build
+
+# 2. XÓA THƯ MỤC SOURCE ADMIN
+# Bước này là tùy chọn, nhưng giúp giảm kích thước Docker Image
+RUN rm -rf ./admin 
 
 # Cấp quyền thực thi cho start.sh
 RUN chmod +x start.sh
