push file docker - start

--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -1,38 +1,20 @@
-# Dockerfile cho MedusaJS chạy trên Render (build cả admin)
+# Development Dockerfile for Medusa
 FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Copy package files và cài dependencies backend
+# Copy package files and npm config
 COPY package.json package-lock.json ./
+
+# Install all dependencies using npm
 RUN npm install
 
-# Copy toàn bộ source code (Bao gồm cả thư mục src/admin)
+# Copy source code
 COPY . .
 
-# Cài đặt bash vì Alpine không có sẵn
-RUN apk add --no-cache bash
-
-# 1. Chuyển đến thư mục Admin thực tế
-WORKDIR /app/src/admin
-RUN npm install && npm run build
-
-# 2. Quay lại thư mục backend gốc
-WORKDIR /app
-
-# *** FIX LỖI: DI CHUYỂN THƯ MỤC BUILD (THAY 'dist' bằng 'build') ***
-# Di chuyển thư mục build từ /app/src/admin/build sang /app/admin-build
-RUN mv ./src/admin/build ./admin-build
-
-# 4. XÓA THƯ MỤC SOURCE ADMIN (Không cần thiết cho runtime)
-RUN rm -rf ./src/admin
-
-# Cấp quyền thực thi cho start.sh
-RUN chmod +x start.sh
-
-# Expose port 9000 (Medusa default)
+# Expose the port Medusa runs on
 EXPOSE 9000
 
-# Chạy start.sh
-CMD ["bash", "./start.sh"]
+# Start with migrations and then the development server
+CMD ["./start.sh"]
