--- a/EcommerceProject/.env
+++ b/EcommerceProject/.env
@@ -1,5 +1,7 @@
 
-REACT_APP_BACKEND_URL=http://localhost:9000
+# REACT_APP_BACKEND_URL=http://localhost:9000
+REACT_APP_BACKEND_URL=https://ecommerceproject-production-679b.up.railway.app
+
 
 # Google OAuth callback URL
 REACT_APP_GOOGLE_CALLBACK=http://localhost:3000/auth/google/callback
