UPDATE: MedusaConfig & Dockerfile

--- a/my-medusa-store/Dockerfile
+++ b/my-medusa-store/Dockerfile
@@ -1,37 +1,42 @@
-# Dockerfile for Medusa v2 + Admin
+# Stage 1: Build
+FROM node:20-alpine AS builder
 
-# Base image
-FROM node:20-alpine
-
-# Set working directory
 WORKDIR /app
 
-# Copy backend package files
+# Cài đặt các thư viện cần thiết cho hệ thống (Python, make, g++ cho native modules)
+RUN apk add --no-cache libc6-compat python3 make g++
+
 COPY package.json package-lock.json ./
 
-# Install backend dependencies
-RUN npm install
+# Cài đặt dependencies
+RUN npm ci
 
-# Copy backend source code
 COPY . .
 
-# --- Build Admin ---
-# Move into admin folder
-WORKDIR /app/src/admin
-
-# Install admin dependencies
-RUN npm install
-
-# Build admin
+# Build Medusa (Lệnh này sẽ tự động build cả Admin Dashboard)
 RUN npm run build
 
-# Move back to backend root
+# Stage 2: Production Runner
+FROM node:20-alpine AS runner
+
 WORKDIR /app
 
-# Expose Medusa default port
+ENV NODE_ENV=production
+
+# Cài libc6-compat để chạy ổn định trên Alpine
+RUN apk add --no-cache libc6-compat
+
+# Copy node_modules và source đã build từ builder
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/.medusa ./.medusa
+COPY --from=builder /app/package.json ./package.json
+
+# Copy các file config quan trọng
+COPY --from=builder /app/medusa-config.ts ./medusa-config.ts
+# Nếu bạn có file .env.template thì copy vào, nhưng KHÔNG copy .env thật
+
+# Port mặc định
 EXPOSE 9000
 
-# Start Medusa with migrations
-# CMD ["npx", "medusa", "develop"]
-CMD ["sh", "-c", "npx medusa db:setup && npx medusa start"]
-
+# Lệnh chạy server (KHÔNG chạy migration ở đây để an toàn)
+CMD ["npm", "run", "start"]
