--- a/my-medusa-store/package.json
+++ b/my-medusa-store/package.json
@@ -52,7 +52,9 @@
     "awilix": "^8.0.1",
     "bcryptjs": "^3.0.2",
     "nodemailer": "^7.0.10",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@mikro-orm/cli": "6.4.16",
@@ -72,8 +74,6 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
     "vite": "^5.2.11",
     "yalc": "^1.0.0-pre.53"
   },
